<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen_1">

    <TextView
        android:id="@+id/sc1_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_employee_detail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="30sp"
        android:layout_marginTop="20sp"
        />

    <EditText
        android:gravity="center"
        android:id="@+id/sc1_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_name"
        app:layout_constraintTop_toBottomOf="@id/sc1_welcome"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="text"
        android:layout_marginTop="20sp"
        android:autofillHints="name"
        />


    <EditText
        android:gravity="center"
        android:id="@+id/sc1_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_last_name"
        app:layout_constraintTop_toBottomOf="@id/sc1_first_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:autofillHints="name"
        android:inputType="text" />


    <EditText
        android:gravity="center"
        android:id="@+id/sc1_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_age"
        app:layout_constraintTop_toBottomOf="@id/sc1_last_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="numberDecimal"
        android:autofillHints="phone"
        />


    <EditText
        android:gravity="center"
        android:id="@+id/sc1_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_address"
        app:layout_constraintTop_toBottomOf="@id/sc1_age"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:autofillHints="postalAddress"
        android:inputType="textPostalAddress"
        />


    <EditText
        android:gravity="center"
        android:id="@+id/sc1_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_e_mail_id"
        app:layout_constraintTop_toBottomOf="@id/sc1_address"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        />


    <EditText
        android:gravity="center"
        android:id="@+id/sc1_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sc1_email"
        android:hint="@string/enter_mobile_no"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:autofillHints="phone"
        android:inputType="phone"
        />

    <Button
        android:id="@+id/sc1_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/sc1_mobile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>