<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salaray"
            android:layout_marginEnd="10sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/cv2_salary"
            android:text="@string/age"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experience"
            android:layout_marginEnd="10sp"
            />
        <TextView
            android:id="@+id/cv2_experience"
            android:layout_width="wrap_content"
            android:text="@string/age"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:layout_marginEnd="10sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/cv2_last_company"
            android:text="@string/age"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:text="@string/company_reference"
            />
        <TextView
            android:id="@+id/cv2_last_company_ref"
            android:layout_width="wrap_content"
            android:text="@string/age"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</LinearLayout>