<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/cv1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="30sp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginEnd="10sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/cv1_first_name"
            android:text="@string/age"
            android:layout_height="wrap_content"
        />
        <TextView
            android:layout_marginStart="5sp"
            android:id="@+id/cv1_last_name"
            android:layout_width="wrap_content"
            android:text="@string/age"
            android:layout_height="wrap_content"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:layout_marginEnd="10sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/cv1_age"
            android:text="@string/age"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginEnd="10sp"
            />
        <TextView
            android:id="@+id/cv1_address"
            android:layout_width="wrap_content"
            android:text="@string/age"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:layout_marginEnd="10sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/cv1_email"
            android:text="@string/age"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            />
        <TextView
            android:layout_marginStart="30sp"
            android:id="@+id/cv1_mobile"
            android:layout_width="wrap_content"
            android:text="@string/age"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</LinearLayout>